web_page/styles.css
/*
names: Azam, Brandon, David, Trey
class: CS3300
*/

/*Home Page*/
.homepage {
    animation: background_shimmer ease-in-out 1s;
    animation-iteration-count: 1;
    background: linear-gradient(45deg,#141414 0%, #19232a 50%,
      rgb(52, 52, 52) 75%, #141414 100%);
    background-size: 400% 200%;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
.homepage h1 {
    font-size: 40px;
    font-family: 'Gravitas One', serif;
    font-weight: 400;
    font-style: normal;
}
.homepage b {
    color:rgb(252, 234, 143)
}
/*Page Headers*/
.header-container {
    display: flex;
    justify-content: space-between;
    color: white;
}
.header-container a {
    color: inherit;
    text-decoration: none;
}
.left-header, 
.left-header h2,
.left-header a {
    flex: 1;
    display: flex;
    text-align: left;
    flex-direction: row;
    margin: 8px;
}

.left-header h2 {
    font-size: 30px;
}

.left-header img {
    width: 50px;
    height: 50px;
    border-radius: 18px;
    margin-right: 8px;
}
.center-header {
    text-align: center;
    flex: 1;
    white-space: nowrap;
    flex-direction: row;
    margin-top: 40px;
    
}
.center-header img {
    width: 400px;
    height: 150px;
    border-radius: 15px;
}
.right-header {
    text-align: right;
    flex: 1;
    margin-top: 20px;
    margin-right: 25px;
    font-size: 22px;
}

.right-header span {
    margin-right: 15px;
}

.right-header img {
    width: 40px;
    height: 40px;
    vertical-align: middle;
}
/*End Page Headers*/

/*Leaderboard*/
.leaderboard-container {
    display: flex;
    flex-direction: column;
    background-color: rgb(252, 234, 143);
    width: 280px;
    border-radius: 10px;
    text-align: center;
    color: black;
    margin: 20px;
    font-size: 22px;
    justify-content: center;
}

table, th, td{
    border: 2px solid;
    border-collapse: collapse;
    text-align: center;
    margin: 10px;
    
}

.leaderboard-container label {
    margin-top: 20px;
}

.full-leaderboard-containers {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.full-leaderboard-containers th {
    font-size: 35px;
}

.full-leaderboard-containers table {
    margin: 10px;
}

.rank-col {
    width: 70px;
}

.leaderboard {
    width: 400px;
    background-color: rgb(252, 234, 143);
    margin: 15px;
    border-radius: 15px;
}

.leaderboard table {
    width: 375px;
}

/*Games List*/

/*List Container*/
.games-container {
    color: #FFED29;
}

.games-container,
.games-container img,
.games-container a 
.games-container label {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    white-space: nowrap;
}

.games-container h2 {
    font-size: 30px;
}

/*Search Bar*/
.game-search {
    display: flex;
    flex-direction: column;
    color: white;
}
.game-search input {
    width: 250px;
    height: 30px;
    border-radius: 10px;
    margin-bottom: 50px;
    font-size: 18px;
    background-color: darkgray;
}
.game-search label {
    font-size: 22px;
}

.list-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    background-color: rgb(252, 234, 143);
    border-radius: 15px;
    width: 875px;
    height: 950px;
}

/*Individual Game Item*/
.game {
   text-align: center; 
   color: black;
   margin: 10px;
}
.game img {
    width: 400px;
    height: 260px;
    border-radius: 5px;
}
.game:hover {
    animation: hover_react ease-out 0.25s forwards;
}
.game label {
    font-size: 25px;
}

.no-games {
    color: black;
    margin-top: 20px;
}

.navigation a {
    color: black;
}
/*END Games List*/

/* Game Pages */

/* Hangman HTML */
.game-display {
    text-align: center;
}

/*User Form*/
.user-form {
    color: white;
}
.user-form,
.user-form label,
.user-form input,
.user-form button {
    display: flex;
    flex-direction: column;
    gap: 10px;
    text-align: center;
}
.user-form input {
    margin: 0 auto;
    width: 190px;
    height: 30px;
    border-radius: 10px;
    margin-bottom: 15px;
    font-size: 17px;
    background-color: darkgray;
}
.user-form button, input[type="submit"] {
    animation: submission_button ease-out 0.50s;
    margin: 0 auto;
    width: 120px;
    height: 40px;
    border-radius: 20px;
    font-size: 20px;
    justify-content: center;
    background-color: #FFED29;
    color: black;
}

.user-form label {
    display: inline-block;
}
.user-form span {
    color:#e12f47; 
}
/*END User Forms*/

/*About Section*/
.about p {
   color: white; 
   margin-left: 55px;
   margin-bottom: 50px
}
.about h2 {
    font-family: 'Gravitas One', serif;
    font-weight: 250;
    color: #FFED29;
    margin-top: 100px;
    margin-left: 35px;
}
.about h3 {
    font-family: 'Gravitas One', serif;
    font-weight: 250;
    color: #FFED29;
    margin-top: 20px;
    margin-left: 35px;
}

/*USER SETTINGS*/

.user-settings {
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.user-settings h2 {
    font-size: 22px;
    text-align: center;
}

.user-settings-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
}

.user-settings-content hr {
    width: 450px;
}

.user-settings-content button {
    animation: submission_button ease-out 0.50s;
    margin: 0 auto;
    width: 150px;
    height: 40px;
    border-radius: 20px;
    font-size: 20px;
    justify-content: center;
    background-color: #FFED29;
    color: black;
}

.user-settings-content table {
    color: black;
}

.account-info {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 400px;
}

.account-info input {
    height: 25px;
    border-radius: 5px;
    background-color:rgb(69, 70, 88);
    color: white;
    font-size: 19px;
    width: 200px;
    margin: 10px;
}

.account-info h1 {
    font-size: 25px;
}

.error-message {
    display: flex;
    flex-direction: column;
    background-color: rgb(252, 234, 143);
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    width: 350px;
    height: 120px;
}

.error-message div {
    background-color: rgb(85, 85, 85);
    border-radius: 5px;
    color: white;
    height: 50px;
    width: 330px;
}

.error-message a {
    color: #FFED29;
}



/*Documentation Section*/

.documentation {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    align-items: center;
    color: white;
}

.documentation h1 {
    font-size: 25px;
}

.documentation hr {
    width: 600px;
    margin-bottom: 1em;
}

.documentation embed {
    margin: 20px;
}

/*TYPE SPRINT*/
.type-sprint {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: white;
}

.type-sprint mark {
    background-color: #FFED29;
    border-radius: 5px;
}

.type-sprint p {
    width: 900px;
    font-size: 35px;
    white-space: pre-wrap;
}

.ts-input {
    color: #FFED29;
}

.stats {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: white;
}

.stats hr {
    width: 900px;
}

.stats table {
    color: black;
}

.stats p {
    color: black;
}

/* PATH TO PARADISE */
.game-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.game-text {
    text-align: center;
    width: 800px;
    font-size: 35px;
    color: white;
}

.user-input {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 850px;
}

.user-input button {
    width: 400px;
    height: 100px;
    margin: 10px;
    background-color: #19232a;
    border-radius: 15px;
    color: white;
    font-size: 22px;
}


/*Animations*/
/*Submission Pages*/

/*Form Submissison Buttons*/
@keyframes submission_button {
    from {
        transform: scale(0.95);
        justify-content: center;
        background-color: #000000;
        color: #FFED29; 
    }
    50% {
        transform: scale(1.125);
        justify-content: center;
        background-color: #7a733b;
        color: #7a733b;
    }
    to {
        transform: scale(1);
        justify-content: center;
        background-color: #FFED29;
        color: black;
    }
}

@keyframes background_shimmer {
    0% {
        background-position: 100% center;
    }
    100% {
        backgound-position: -100% center;
    }
}

@keyframes hover_react {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.05);
    }
}
/*Games*/

/*Hangman*/
#hangman_canvas {
    border: 2px solid #FFED29;
    background-color: black;
}

#wordDisplay,
#guessedLetters {
    color: white;
    font-size: 24px;
}

.hangman_score {
    color: white;
    font-size: 24px;
}

/* Snake */
.snake_score {
    text-align: center;
    font-size: 24px;
    margin-top: 10px;
    color: white;
}

.game-message {
    text-align: center;
    font-size: 20px;
    color: white;
    margin-top: 10px;
}

